--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -47,14 +47,15 @@ Umathunderdelimiterbgap Umathunderdelimitervgap Uoverdelimiter Uradical Uroot \
 Ustack Ustartdisplaymath Ustartmath Ustopdisplaymath Ustopmath \
 Usubscript Usuperscript Uunderdelimiter alignmark aligntab \
 attribute attributedef catcodetable clearmarks crampeddisplaystyle \
-crampedscriptscriptstyle crampedscriptstyle crampedtextstyle fontid formatname \
-gleaders ifabsdim ifabsnum ifprimitive initcatcodetable \
-latelua luaescapestring luastartup luatexbanner luatexrevision \
-luatexversion luafunction mathstyle nokerns noligs \
-outputbox pageleftoffset pagetopoffset postexhyphenchar posthyphenchar \
-preexhyphenchar prehyphenchar hyphenationmin discpenalty primitive \
-savecatcodetable scantextokens suppressfontnotfounderror suppressifcsnameerror suppresslongerror \
-suppressoutererror suppressmathparerror matheqnogapstep synctex 
+crampedscriptscriptstyle crampedscriptstyle crampedtextstyle discpenalty fontid \
+formatname gleaders hyphenationmin ifabsdim ifabsnum \
+ifprimitive initcatcodetable latelua luaescapestring luastartup \
+luatexbanner luatexrevision luatexversion luafunction matheqnogapstep \
+mathstyle nokerns noligs normaldeviate outputbox \
+pageleftoffset pagetopoffset postexhyphenchar posthyphenchar preexhyphenchar \
+prehyphenchar primitive randomseed savecatcodetable scantextokens \
+setrandomseed suppressfontnotfounderror suppressifcsnameerror suppresslongerror suppressoutererror \
+suppressmathparerror synctex uniformdeviate 
 
 keywordclass.tex.omega=\
 OmegaVersion bodydir chardp charht \
@@ -69,25 +70,24 @@ efcode expanded ifincsname ifpdfabsdim \
 ifpdfabsnum ifpdfprimitive leftmarginkern letterspacefont lpcode \
 pdfadjustspacing pdfannot pdfcatalog pdfcolorstack pdfcolorstackinit \
 pdfcompresslevel pdfcopyfont pdfcreationdate pdfdecimaldigits pdfdest \
-pdfdestmargin pdfdraftmode pdfeachlinedepth pdfeachlineheight pdfendlink \
-pdfendthread pdffirstlineheight pdffontattr pdffontexpand pdffontname \
-pdffontobjnum pdffontsize pdfgamma pdfgentounicode pdfglyphtounicode \
-pdfhorigin pdfignoreddimen pdfimageapplygamma pdfimagegamma pdfimagehicolor \
-pdfimageresolution pdfincludechars pdfinclusioncopyfonts pdfinclusionerrorlevel pdfinfo \
-pdfinsertht pdflastannot pdflastlinedepth pdflastlink pdflastobj \
-pdflastxform pdflastximage pdflastximagecolordepth pdflastximagepages pdflastxpos \
-pdflastypos pdflinkmargin pdfliteral pdfmapfile pdfmapline \
-pdfminorversion pdfnames pdfnoligatures pdfnormaldeviate pdfobj \
-pdfobjcompresslevel pdfoptionpdfminorversion pdfoutline pdfoutput pdfpageattr \
-pdfpagebox pdfpageheight pdfpageref pdfpageresources pdfpagesattr \
-pdfpagewidth pdfpkmode pdfpkresolution pdfprimitive pdfprotrudechars \
-pdfpxdimen pdfrandomseed pdfrefobj pdfrefxform pdfrefximage \
-pdfreplacefont pdfrestore pdfretval pdfsave pdfsavepos \
-pdfsetmatrix pdfsetrandomseed pdfstartlink pdfstartthread pdftexbanner \
-pdftexrevision pdftexversion pdfthread pdfthreadmargin pdftracingfonts \
-pdftrailer pdfuniformdeviate pdfuniqueresname pdfvorigin pdfxform \
-pdfxformattr pdfxformname pdfxformresources pdfximage pdfximagebbox \
-quitvmode rightmarginkern rpcode tagcode 
+pdfdestmargin pdfdraftmode pdfendlink pdfendthread pdffontattr \
+pdffontexpand pdffontname pdffontobjnum pdffontsize pdfgamma \
+pdfgentounicode pdfglyphtounicode pdfhorigin pdfignoreddimen pdfimageapplygamma \
+pdfimagegamma pdfimagehicolor pdfimageresolution pdfincludechars pdfinclusioncopyfonts \
+pdfinclusionerrorlevel pdfinfo pdfinsertht pdflastannot pdflastlink \
+pdflastobj pdflastxform pdflastximage pdflastximagecolordepth pdflastximagepages \
+pdflastxpos pdflastypos pdflinkmargin pdfliteral pdfmapfile \
+pdfmapline pdfminorversion pdfnames pdfnoligatures pdfnormaldeviate \
+pdfobj pdfobjcompresslevel pdfoptionpdfminorversion pdfoutline pdfoutput \
+pdfpageattr pdfpagebox pdfpageheight pdfpageref pdfpageresources \
+pdfpagesattr pdfpagewidth pdfpkmode pdfpkresolution pdfprimitive \
+pdfprotrudechars pdfpxdimen pdfrandomseed pdfrefobj pdfrefxform \
+pdfrefximage pdfreplacefont pdfrestore pdfretval pdfsave \
+pdfsavepos pdfsetmatrix pdfsetrandomseed pdfstartlink pdfstartthread \
+pdftexbanner pdftexrevision pdftexversion pdfthread pdfthreadmargin \
+pdftracingfonts pdftrailer pdfuniformdeviate pdfuniqueresname pdfvorigin \
+pdfxform pdfxformattr pdfxformname pdfxformresources pdfximage \
+pdfximagebbox quitvmode rightmarginkern rpcode tagcode 
 
 keywordclass.tex.tex=\
 - / AlephVersion Alephminorversion \
@@ -174,58 +174,58 @@ moveleft moveright mskip muexpr multiply \
 muskip muskipdef mutoglue newlinechar noalign \
 noboundary noexpand noindent nokerns noligs \
 nolimits nolocaldirs nolocalwhatsits nonscript nonstopmode \
-nulldelimiterspace nullfont number numexpr odelcode \
-odelimiter omathaccent omathchar omathchardef omathcode \
-omit openin openout or oradical \
-outer output outputbox outputpenalty over \
-overfullrule overline overwithdelims pagebottomoffset pagedepth \
-pagedir pagediscards pagefilllstretch pagefillstretch pagefilstretch \
-pagegoal pageheight pageleftoffset pagerightoffset pageshrink \
-pagestretch pagetopoffset pagetotal pagewidth par \
-pardir parfillskip parindent parshape parshapedimen \
-parshapeindent parshapelength parskip patterns pausing \
-pdfadjustspacing pdfannot pdfcatalog pdfcolorstack pdfcolorstackinit \
-pdfcompresslevel pdfcopyfont pdfcreationdate pdfdecimaldigits pdfdest \
-pdfdestmargin pdfdraftmode pdfeachlinedepth pdfeachlineheight pdfendlink \
-pdfendthread pdffirstlineheight pdffontattr pdffontexpand pdffontname \
-pdffontobjnum pdffontsize pdfgamma pdfgentounicode pdfglyphtounicode \
-pdfhorigin pdfignoreddimen pdfimageapplygamma pdfimagegamma pdfimagehicolor \
-pdfimageresolution pdfincludechars pdfinclusioncopyfonts pdfinclusionerrorlevel pdfinfo \
-pdfinsertht pdflastannot pdflastlinedepth pdflastlink pdflastobj \
-pdflastxform pdflastximage pdflastximagecolordepth pdflastximagepages pdflastxpos \
-pdflastypos pdflinkmargin pdfliteral pdfmapfile pdfmapline \
-pdfminorversion pdfnames pdfnoligatures pdfnormaldeviate pdfobj \
-pdfobjcompresslevel pdfoptionpdfminorversion pdfoutline pdfoutput pdfpageattr \
-pdfpagebox pdfpageheight pdfpageref pdfpageresources pdfpagesattr \
-pdfpagewidth pdfpkmode pdfpkresolution pdfprimitive pdfprotrudechars \
-pdfpxdimen pdfrandomseed pdfrefobj pdfrefxform pdfrefximage \
-pdfreplacefont pdfrestore pdfretval pdfsave pdfsavepos \
-pdfsetmatrix pdfsetrandomseed pdfstartlink pdfstartthread pdftexbanner \
-pdftexrevision pdftexversion pdfthread pdfthreadmargin pdftracingfonts \
-pdftrailer pdfuniformdeviate pdfuniqueresname pdfvorigin pdfxform \
-pdfxformattr pdfxformname pdfxformresources pdfximage pdfximagebbox \
-penalty postdisplaypenalty postexhyphenchar posthyphenchar predisplaydirection \
-predisplaypenalty predisplaysize preexhyphenchar prehyphenchar pretolerance \
-prevdepth prevgraf primitive protected quitvmode \
-radical raise read readline relax \
-relpenalty right rightghost righthyphenmin rightmarginkern \
-rightskip romannumeral rpcode savecatcodetable savinghyphcodes \
-savingvdiscards scantextokens scantokens scriptfont scriptscriptfont \
-scriptscriptstyle scriptspace scriptstyle scrollmode setbox \
-setlanguage sfcode shipout show showbox \
-showboxbreadth showboxdepth showgroups showifs showlists \
-showthe showtokens skewchar skip skipdef \
-spacefactor spaceskip span special splitbotmark \
-splitbotmarks splitdiscards splitfirstmark splitfirstmarks splitmaxdepth \
-splittopskip string suppressfontnotfounderror suppressifcsnameerror suppresslongerror \
-suppressoutererror synctex tabskip tagcode textdir \
-textfont textstyle the thickmuskip thinmuskip \
-time toks toksdef tolerance topmark \
-topmarks topskip tracingassigns tracingcommands tracinggroups \
-tracingifs tracinglostchars tracingmacros tracingnesting tracingonline \
-tracingoutput tracingpages tracingparagraphs tracingrestores tracingscantokens \
-tracingstats uccode uchyph underline unexpanded \
-unhbox unhcopy unkern unless unpenalty \
+normaldeviate nulldelimiterspace nullfont number numexpr \
+odelcode odelimiter omathaccent omathchar omathchardef \
+omathcode omit openin openout or \
+oradical outer output outputbox outputpenalty \
+over overfullrule overline overwithdelims pagebottomoffset \
+pagedepth pagedir pagediscards pagefilllstretch pagefillstretch \
+pagefilstretch pagegoal pageheight pageleftoffset pagerightoffset \
+pageshrink pagestretch pagetopoffset pagetotal pagewidth \
+par pardir parfillskip parindent parshape \
+parshapedimen parshapeindent parshapelength parskip patterns \
+pausing pdfadjustspacing pdfannot pdfcatalog pdfcolorstack \
+pdfcolorstackinit pdfcompresslevel pdfcopyfont pdfcreationdate pdfdecimaldigits \
+pdfdest pdfdestmargin pdfdraftmode pdfendlink pdfendthread \
+pdffontattr pdffontexpand pdffontname pdffontobjnum pdffontsize \
+pdfgamma pdfgentounicode pdfglyphtounicode pdfhorigin pdfignoreddimen \
+pdfimageapplygamma pdfimagegamma pdfimagehicolor pdfimageresolution pdfincludechars \
+pdfinclusioncopyfonts pdfinclusionerrorlevel pdfinfo pdfinsertht pdflastannot \
+pdflastlink pdflastobj pdflastxform pdflastximage pdflastximagecolordepth \
+pdflastximagepages pdflastxpos pdflastypos pdflinkmargin pdfliteral \
+pdfmapfile pdfmapline pdfminorversion pdfnames pdfnoligatures \
+pdfnormaldeviate pdfobj pdfobjcompresslevel pdfoptionpdfminorversion pdfoutline \
+pdfoutput pdfpageattr pdfpagebox pdfpageheight pdfpageref \
+pdfpageresources pdfpagesattr pdfpagewidth pdfpkmode pdfpkresolution \
+pdfprimitive pdfprotrudechars pdfpxdimen pdfrandomseed pdfrefobj \
+pdfrefxform pdfrefximage pdfreplacefont pdfrestore pdfretval \
+pdfsave pdfsavepos pdfsetmatrix pdfsetrandomseed pdfstartlink \
+pdfstartthread pdftexbanner pdftexrevision pdftexversion pdfthread \
+pdfthreadmargin pdftracingfonts pdftrailer pdfuniformdeviate pdfuniqueresname \
+pdfvorigin pdfxform pdfxformattr pdfxformname pdfxformresources \
+pdfximage pdfximagebbox penalty postdisplaypenalty postexhyphenchar \
+posthyphenchar predisplaydirection predisplaypenalty predisplaysize preexhyphenchar \
+prehyphenchar pretolerance prevdepth prevgraf primitive \
+protected quitvmode radical raise randomseed \
+read readline relax relpenalty right \
+rightghost righthyphenmin rightmarginkern rightskip romannumeral \
+rpcode savecatcodetable savinghyphcodes savingvdiscards scantextokens \
+scantokens scriptfont scriptscriptfont scriptscriptstyle scriptspace \
+scriptstyle scrollmode setbox setlanguage setrandomseed \
+sfcode shipout show showbox showboxbreadth \
+showboxdepth showgroups showifs showlists showthe \
+showtokens skewchar skip skipdef spacefactor \
+spaceskip span special splitbotmark splitbotmarks \
+splitdiscards splitfirstmark splitfirstmarks splitmaxdepth splittopskip \
+string suppressfontnotfounderror suppressifcsnameerror suppresslongerror suppressoutererror \
+synctex tabskip tagcode textdir textfont \
+textstyle the thickmuskip thinmuskip time \
+toks toksdef tolerance topmark topmarks \
+topskip tracingassigns tracingcommands tracinggroups tracingifs \
+tracinglostchars tracingmacros tracingnesting tracingonline tracingoutput \
+tracingpages tracingparagraphs tracingrestores tracingscantokens tracingstats \
+uccode uchyph underline unexpanded unhbox \
+unhcopy uniformdeviate unkern unless unpenalty \
 unskip unvbox unvcopy uppercase vadjust \
 valign vbadness vbox vcenter vfil \
 vfill vfilneg vfuzz voffset vrule \
