--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -48,20 +48,20 @@ Ustack Ustartdisplaymath Ustartmath Ustopdisplaymath Ustopmath \
 Usubscript Usuperscript Uunderdelimiter adjustspacing alignmark \
 aligntab attribute attributedef bodydir boxdir \
 catcodetable clearmarks crampeddisplaystyle crampedscriptscriptstyle crampedscriptstyle \
-crampedtextstyle discpenalty efcode fontid formatname \
-gleaders hyphenationmin ifabsdim ifabsnum ifprimitive \
-ignoreligaturesinfont initcatcodetable lastxpos lastypos latelua \
-leftghost leftmarginkern letterspacefont localbrokenpenalty localinterlinepenalty \
-localleftbox localrightbox lpcode luaescapestring luastartup \
-luatexbanner luatexrevision luatexversion luafunction mathdir \
-matheqnogapstep mathstyle nokerns noligs normaldeviate \
-outputbox pagedir pageheight pagebottomoffset pageleftoffset \
-pagerightoffset pagetopoffset pagewidth pardir postexhyphenchar \
-posthyphenchar preexhyphenchar prehyphenchar primitive protrudechars \
-randomseed rightghost rightmarginkern rpcode savecatcodetable \
-savepos scantextokens setrandomseed suppressfontnotfounderror suppressifcsnameerror \
-suppresslongerror suppressoutererror suppressmathparerror synctex tagcode \
-textdir uniformdeviate 
+crampedtextstyle efcode fontid formatname gleaders \
+hyphenationmin ifabsdim ifabsnum ifprimitive ignoreligaturesinfont \
+initcatcodetable lastxpos lastypos latelua leftghost \
+leftmarginkern letterspacefont localbrokenpenalty localinterlinepenalty localleftbox \
+localrightbox lpcode luaescapestring luastartup luatexbanner \
+luatexrevision luatexversion luafunction mathdir matheqnogapstep \
+mathstyle nokerns noligs normaldeviate outputbox \
+pagedir pageheight pagebottomoffset pageleftoffset pagerightoffset \
+pagetopoffset pagewidth pardir postexhyphenchar posthyphenchar \
+preexhyphenchar prehyphenchar primitive protrudechars randomseed \
+rightghost rightmarginkern rpcode savecatcodetable savepos \
+scantextokens setrandomseed suppressfontnotfounderror suppressifcsnameerror suppresslongerror \
+suppressoutererror suppressmathparerror synctex tagcode textdir \
+uniformdeviate 
 
 keywordclass.tex.omega=\
 OmegaVersion bodydir chardp charht \
@@ -146,99 +146,99 @@ endcsname endgroup endinput endlinechar eqno \
 errhelp errmessage errorcontextlines errorstopmode escapechar \
 everycr everydisplay everyeof everyhbox everyjob \
 everymath everypar everyvbox exhyphenchar exhyphenpenalty \
-expandafter expanded fam fi finalhyphendemerits \
-firstmark firstmarks floatingpenalty font fontchardp \
-fontcharht fontcharic fontcharwd fontdimen fontid \
-fontname formatname futurelet gdef gleaders \
-global globaldefs glueexpr glueshrink glueshrinkorder \
-gluestretch gluestretchorder gluetomu halign hangafter \
-hangindent hbadness hbox hfil hfill \
-hfilneg hfuzz hoffset holdinginserts hrule \
-hsize hskip hss ht hyphenation \
-hyphenchar hyphenpenalty if ifabsdim ifabsnum \
-ifcase ifcat ifcsname ifdefined ifdim \
-ifeof iffalse iffontchar ifhbox ifhmode \
-ifincsname ifinner ifmmode ifnum ifodd \
-ifpdfabsdim ifpdfabsnum ifpdfprimitive ifprimitive iftrue \
-ifvbox ifvmode ifvoid ifx ignoreligaturesinfont \
-ignorespaces immediate indent initcatcodetable input \
-inputlineno insert insertpenalties interactionmode interlinepenalties \
-interlinepenalty jobname kern language lastbox \
-lastkern lastlinefit lastnodetype lastpenalty lastskip \
-lastxpos lastypos latelua lccode leaders \
-left leftghost lefthyphenmin leftmarginkern leftskip \
-leqno let letterspacefont limits linepenalty \
-lineskip lineskiplimit localbrokenpenalty localinterlinepenalty localleftbox \
-localrightbox long looseness lower lowercase \
-lpcode luaescapestring luastartup luatexbanner luatexrevision \
-luatexversion mag mark marks mathaccent \
-mathbin mathchar mathchardef mathchoice mathclose \
-mathcode mathdir mathinner mathop mathopen \
-mathord mathpunct mathrel mathstyle mathsurround \
-maxdeadcycles maxdepth meaning medmuskip message \
-middle mkern month moveleft moveright \
-mskip muexpr multiply muskip muskipdef \
-mutoglue newlinechar noalign noboundary noexpand \
-noindent nokerns noligs nolimits nolocaldirs \
-nolocalwhatsits nonscript nonstopmode normaldeviate nulldelimiterspace \
-nullfont number numexpr odelcode odelimiter \
-omathaccent omathchar omathchardef omathcode omit \
-openin openout or oradical outer \
-output outputbox outputpenalty over overfullrule \
-overline overwithdelims pagebottomoffset pagedepth pagedir \
-pagediscards pagefilllstretch pagefillstretch pagefilstretch pagegoal \
-pageheight pageleftoffset pagerightoffset pageshrink pagestretch \
-pagetopoffset pagetotal pagewidth par pardir \
-parfillskip parindent parshape parshapedimen parshapeindent \
-parshapelength parskip patterns pausing pdfadjustspacing \
-pdfannot pdfcatalog pdfcolorstack pdfcolorstackinit pdfcompresslevel \
-pdfcopyfont pdfcreationdate pdfdecimaldigits pdfdest pdfdestmargin \
-pdfdraftmode pdfendlink pdfendthread pdffontattr pdffontexpand \
-pdffontname pdffontobjnum pdffontsize pdfgamma pdfgentounicode \
-pdfglyphtounicode pdfhorigin pdfignoreddimen pdfimageapplygamma pdfimagegamma \
-pdfimagehicolor pdfimageresolution pdfincludechars pdfinclusioncopyfonts pdfinclusionerrorlevel \
-pdfinfo pdfinsertht pdflastannot pdflastlink pdflastobj \
-pdflastxform pdflastximage pdflastximagecolordepth pdflastximagepages pdflastxpos \
-pdflastypos pdflinkmargin pdfliteral pdfmapfile pdfmapline \
-pdfminorversion pdfnames pdfnoligatures pdfnormaldeviate pdfobj \
-pdfobjcompresslevel pdfoptionpdfminorversion pdfoutline pdfoutput pdfpageattr \
-pdfpagebox pdfpageheight pdfpageref pdfpageresources pdfpagesattr \
-pdfpagewidth pdfpkmode pdfpkresolution pdfprimitive pdfprotrudechars \
-pdfpxdimen pdfrandomseed pdfrefobj pdfrefxform pdfrefximage \
-pdfreplacefont pdfrestore pdfretval pdfsave pdfsavepos \
-pdfsetmatrix pdfsetrandomseed pdfstartlink pdfstartthread pdftexbanner \
-pdftexrevision pdftexversion pdfthread pdfthreadmargin pdftracingfonts \
-pdftrailer pdfuniformdeviate pdfuniqueresname pdfvorigin pdfxform \
-pdfxformattr pdfxformname pdfxformresources pdfximage pdfximagebbox \
-penalty postdisplaypenalty postexhyphenchar posthyphenchar predisplaydirection \
-predisplaypenalty predisplaysize preexhyphenchar prehyphenchar pretolerance \
-prevdepth prevgraf primitive protected quitvmode \
-radical raise randomseed read readline \
-relax relpenalty right rightghost righthyphenmin \
-rightmarginkern rightskip romannumeral rpcode savepos \
-savecatcodetable savinghyphcodes savingvdiscards scantextokens scantokens \
-scriptfont scriptscriptfont scriptscriptstyle scriptspace scriptstyle \
-scrollmode setbox setlanguage setrandomseed sfcode \
-shipout show showbox showboxbreadth showboxdepth \
-showgroups showifs showlists showthe showtokens \
-skewchar skip skipdef spacefactor spaceskip \
-span special splitbotmark splitbotmarks splitdiscards \
-splitfirstmark splitfirstmarks splitmaxdepth splittopskip string \
-suppressfontnotfounderror suppressifcsnameerror suppresslongerror suppressoutererror synctex \
-tabskip tagcode textdir textfont textstyle \
-the thickmuskip thinmuskip time toks \
-toksdef tolerance topmark topmarks topskip \
-tracingassigns tracingcommands tracinggroups tracingifs tracinglostchars \
-tracingmacros tracingnesting tracingonline tracingoutput tracingpages \
-tracingparagraphs tracingrestores tracingscantokens tracingstats uccode \
-uchyph underline unexpanded unhbox unhcopy \
-uniformdeviate unkern unless unpenalty unskip \
-unvbox unvcopy uppercase vadjust valign \
-vbadness vbox vcenter vfil vfill \
-vfilneg vfuzz voffset vrule vsize \
-vskip vsplit vss vtop wd \
-widowpenalties widowpenalty write xdef xleaders \
-xspaceskip year 
+expandafter expanded expandglyphsinfont fam fi \
+finalhyphendemerits firstmark firstmarks floatingpenalty font \
+fontchardp fontcharht fontcharic fontcharwd fontdimen \
+fontid fontname formatname futurelet gdef \
+gleaders global globaldefs glueexpr glueshrink \
+glueshrinkorder gluestretch gluestretchorder gluetomu halign \
+hangafter hangindent hbadness hbox hfil \
+hfill hfilneg hfuzz hoffset holdinginserts \
+hrule hsize hskip hss ht \
+hyphenation hyphenchar hyphenpenalty if ifabsdim \
+ifabsnum ifcase ifcat ifcsname ifdefined \
+ifdim ifeof iffalse iffontchar ifhbox \
+ifhmode ifincsname ifinner ifmmode ifnum \
+ifodd ifpdfabsdim ifpdfabsnum ifpdfprimitive ifprimitive \
+iftrue ifvbox ifvmode ifvoid ifx \
+ignoreligaturesinfont ignorespaces immediate indent initcatcodetable \
+input inputlineno insert insertpenalties interactionmode \
+interlinepenalties interlinepenalty jobname kern language \
+lastbox lastkern lastlinefit lastnodetype lastpenalty \
+lastskip lastxpos lastypos latelua lccode \
+leaders left leftghost lefthyphenmin leftmarginkern \
+leftskip leqno let letterspacefont limits \
+linepenalty lineskip lineskiplimit localbrokenpenalty localinterlinepenalty \
+localleftbox localrightbox long looseness lower \
+lowercase lpcode luaescapestring luastartup luatexbanner \
+luatexrevision luatexversion mag mark marks \
+mathaccent mathbin mathchar mathchardef mathchoice \
+mathclose mathcode mathdir mathinner mathop \
+mathopen mathord mathpunct mathrel mathstyle \
+mathsurround maxdeadcycles maxdepth meaning medmuskip \
+message middle mkern month moveleft \
+moveright mskip muexpr multiply muskip \
+muskipdef mutoglue newlinechar noalign noboundary \
+noexpand noindent nokerns noligs nolimits \
+nolocaldirs nolocalwhatsits nonscript nonstopmode normaldeviate \
+nulldelimiterspace nullfont number numexpr odelcode \
+odelimiter omathaccent omathchar omathchardef omathcode \
+omit openin openout or oradical \
+outer output outputbox outputpenalty over \
+overfullrule overline overwithdelims pagebottomoffset pagedepth \
+pagedir pagediscards pagefilllstretch pagefillstretch pagefilstretch \
+pagegoal pageheight pageleftoffset pagerightoffset pageshrink \
+pagestretch pagetopoffset pagetotal pagewidth par \
+pardir parfillskip parindent parshape parshapedimen \
+parshapeindent parshapelength parskip patterns pausing \
+pdfadjustspacing pdfannot pdfcatalog pdfcolorstack pdfcolorstackinit \
+pdfcompresslevel pdfcopyfont pdfcreationdate pdfdecimaldigits pdfdest \
+pdfdestmargin pdfdraftmode pdfendlink pdfendthread pdffontattr \
+pdffontexpand pdffontname pdffontobjnum pdffontsize pdfgamma \
+pdfgentounicode pdfglyphtounicode pdfhorigin pdfignoreddimen pdfimageapplygamma \
+pdfimagegamma pdfimagehicolor pdfimageresolution pdfincludechars pdfinclusioncopyfonts \
+pdfinclusionerrorlevel pdfinfo pdfinsertht pdflastannot pdflastlink \
+pdflastobj pdflastxform pdflastximage pdflastximagecolordepth pdflastximagepages \
+pdflastxpos pdflastypos pdflinkmargin pdfliteral pdfmapfile \
+pdfmapline pdfminorversion pdfnames pdfnoligatures pdfnormaldeviate \
+pdfobj pdfobjcompresslevel pdfoptionpdfminorversion pdfoutline pdfoutput \
+pdfpageattr pdfpagebox pdfpageheight pdfpageref pdfpageresources \
+pdfpagesattr pdfpagewidth pdfpkmode pdfpkresolution pdfprimitive \
+pdfprotrudechars pdfpxdimen pdfrandomseed pdfrefobj pdfrefxform \
+pdfrefximage pdfreplacefont pdfrestore pdfretval pdfsave \
+pdfsavepos pdfsetmatrix pdfsetrandomseed pdfstartlink pdfstartthread \
+pdftexbanner pdftexrevision pdftexversion pdfthread pdfthreadmargin \
+pdftracingfonts pdftrailer pdfuniformdeviate pdfuniqueresname pdfvorigin \
+pdfxform pdfxformattr pdfxformname pdfxformresources pdfximage \
+pdfximagebbox penalty postdisplaypenalty postexhyphenchar posthyphenchar \
+predisplaydirection predisplaypenalty predisplaysize preexhyphenchar prehyphenchar \
+pretolerance prevdepth prevgraf primitive protected \
+quitvmode radical raise randomseed read \
+readline relax relpenalty right rightghost \
+righthyphenmin rightmarginkern rightskip romannumeral rpcode \
+savepos savecatcodetable savinghyphcodes savingvdiscards scantextokens \
+scantokens scriptfont scriptscriptfont scriptscriptstyle scriptspace \
+scriptstyle scrollmode setbox setlanguage setrandomseed \
+sfcode shipout show showbox showboxbreadth \
+showboxdepth showgroups showifs showlists showthe \
+showtokens skewchar skip skipdef spacefactor \
+spaceskip span special splitbotmark splitbotmarks \
+splitdiscards splitfirstmark splitfirstmarks splitmaxdepth splittopskip \
+string suppressfontnotfounderror suppressifcsnameerror suppresslongerror suppressoutererror \
+synctex tabskip tagcode textdir textfont \
+textstyle the thickmuskip thinmuskip time \
+toks toksdef tolerance topmark topmarks \
+topskip tracingassigns tracingcommands tracinggroups tracingifs \
+tracinglostchars tracingmacros tracingnesting tracingonline tracingoutput \
+tracingpages tracingparagraphs tracingrestores tracingscantokens tracingstats \
+uccode uchyph underline unexpanded unhbox \
+unhcopy uniformdeviate unkern unless unpenalty \
+unskip unvbox unvcopy uppercase vadjust \
+valign vbadness vbox vcenter vfil \
+vfill vfilneg vfuzz voffset vrule \
+vsize vskip vsplit vss vtop \
+wd widowpenalties widowpenalty write xdef \
+xleaders xspaceskip year 
 
 keywordclass.tex.xetex=\
 XeTeXversion 
