--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -48,22 +48,23 @@ Ustack Ustartdisplaymath Ustartmath Ustopdisplaymath Ustopmath \
 Usubscript Usuperscript Uunderdelimiter adjustspacing alignmark \
 aligntab attribute attributedef bodydir boxdir \
 catcodetable clearmarks copyfont crampeddisplaystyle crampedscriptscriptstyle \
-crampedscriptstyle crampedtextstyle draftmode efcode fontid \
-formatname gleaders hyphenationmin ifabsdim ifabsnum \
-ifprimitive ignoreligaturesinfont initcatcodetable lastsavedboxresourceindex lastsavedimageresourceindex \
-lastsavedimageresourcepages lastxpos lastypos latelua leftghost \
-leftmarginkern letterspacefont localbrokenpenalty localinterlinepenalty localleftbox \
-localrightbox lpcode luaescapestring luastartup luatexbanner \
-luatexrevision luatexversion luafunction mathdir matheqnogapstep \
-mathstyle nokerns noligs normaldeviate outputbox \
-outputmode pagedir pageheight pagebottomoffset pageleftoffset \
-pagerightoffset pagetopoffset pagewidth pardir pdfextension \
-postexhyphenchar posthyphenchar preexhyphenchar prehyphenchar primitive \
-protrudechars pxdimen randomseed rightghost rightmarginkern \
-rpcode saveboxresource savecatcodetable saveimageresource savepos \
-scantextokens setrandomseed suppressfontnotfounderror suppressifcsnameerror suppresslongerror \
-suppressoutererror suppressmathparerror synctex tagcode textdir \
-tracingfonts uniformdeviate useboxresource useimageresource 
+crampedscriptstyle crampedtextstyle draftmode dviextension dvifeedback \
+efcode fontid formatname gleaders hyphenationmin \
+ifabsdim ifabsnum ifprimitive ignoreligaturesinfont initcatcodetable \
+insertht lastsavedboxresourceindex lastsavedimageresourceindex lastsavedimageresourcepages lastxpos \
+lastypos latelua leftghost leftmarginkern letterspacefont \
+localbrokenpenalty localinterlinepenalty localleftbox localrightbox lpcode \
+luaescapestring luastartup luatexbanner luatexrevision luatexversion \
+luafunction mathdir matheqnogapstep mathstyle nokerns \
+noligs normaldeviate outputbox outputmode pagedir \
+pageheight pagebottomoffset pageleftoffset pagerightoffset pagetopoffset \
+pagewidth pardir pdfextension pdffeedback postexhyphenchar \
+posthyphenchar preexhyphenchar prehyphenchar primitive protrudechars \
+pxdimen randomseed rightghost rightmarginkern rpcode \
+saveboxresource savecatcodetable saveimageresource savepos scantextokens \
+setrandomseed suppressfontnotfounderror suppressifcsnameerror suppresslongerror suppressoutererror \
+suppressmathparerror synctex tagcode textdir tracingfonts \
+uniformdeviate useboxresource useimageresource 
 
 keywordclass.tex.omega=\
 OmegaVersion bodydir chardp charht \
