--- a/context/data/scite/context/scite-context-data-context.properties
+++ b/context/data/scite/context/scite-context-data-context.properties
@@ -204,5 +204,5 @@ rtlvtop ltrvtop autodirhbox autodirvbox autodirvtop \
 leftorrighthbox leftorrightvbox leftorrightvtop lefttoright righttoleft \
 synchronizelayoutdirection synchronizedisplaydirection synchronizeinlinedirection lesshyphens morehyphens \
 nohyphens dohyphens Ucheckedstartdisplaymath Ucheckedstopdisplaymath nobreak \
-allowbreak goodbreak 
+allowbreak goodbreak nospace nospacing dospacing 
 
