--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -70,8 +70,8 @@ saveboxresource savecatcodetable saveimageresource savepos scantextokens \
 setfontid setrandomseed suppressfontnotfounderror suppressifcsnameerror suppresslongerror \
 suppressoutererror suppressmathparerror synctex tagcode textdir \
 tracingfonts uniformdeviate useboxresource useimageresource vpack \
-hpack tpack begincsname lastnamedcs toksapp \
-tokspre etoksapp etokspre 
+hpack tpack csstring begincsname lastnamedcs \
+toksapp tokspre etoksapp etokspre 
 
 keywordclass.tex.omega=\
 OmegaVersion bodydir chardp charht \
@@ -258,8 +258,9 @@ vbox vcenter vfil vfill vfilneg \
 vfuzz voffset vrule vsize vskip \
 vsplit vss vtop wd widowpenalties \
 widowpenalty write xdef xleaders xspaceskip \
-year vpack hpack tpack begincsname \
-lastnamedcs toksapp tokspre etoksapp etokspre 
+year vpack hpack tpack csstring \
+begincsname lastnamedcs toksapp tokspre etoksapp \
+etokspre 
 
 keywordclass.tex.xetex=\
 XeTeXversion 
