--- a/context/data/scite/context/scite-context-data-context.properties
+++ b/context/data/scite/context/scite-context-data-context.properties
@@ -64,7 +64,7 @@ righttoleftmark breakablethinspace nobreakspace nonbreakablespace narrownobreaks
 zerowidthnobreakspace ideographicspace ideographichalffillspace twoperemspace threeperemspace \
 fourperemspace fiveperemspace sixperemspace figurespace punctuationspace \
 hairspace zerowidthspace zerowidthnonjoiner zerowidthjoiner zwnj \
-zwj optionalspace asciispacechar Ux 
+zwj optionalspace asciispacechar Ux eUx 
 
 keywordclass.context.helpers=\
 startsetups stopsetups startxmlsetups stopxmlsetups \
