--- a/context/data/scite/context/scite-context-data-context.properties
+++ b/context/data/scite/context/scite-context-data-context.properties
@@ -206,5 +206,5 @@ leftorrightvtop lefttoright righttoleft synchronizelayoutdirection synchronizedi
 synchronizeinlinedirection lesshyphens morehyphens nohyphens dohyphens \
 Ucheckedstartdisplaymath Ucheckedstopdisplaymath break nobreak allowbreak \
 goodbreak nospace nospacing dospacing naturalhbox \
-naturalvbox naturalhpack naturalvpack 
+naturalvbox naturalhpack naturalvpack frule 
 
