--- a/context/data/scite/context/scite-context-data-context.properties
+++ b/context/data/scite/context/scite-context-data-context.properties
@@ -64,9 +64,10 @@ constantemptyargument continueifinputfile luastringsep !!bs !!es \
 lefttorightmark righttoleftmark breakablethinspace nobreakspace nonbreakablespace \
 narrownobreakspace zerowidthnobreakspace ideographicspace ideographichalffillspace twoperemspace \
 threeperemspace fourperemspace fiveperemspace sixperemspace figurespace \
-punctuationspace hairspace zerowidthspace zerowidthnonjoiner zerowidthjoiner \
-zwnj zwj optionalspace asciispacechar Ux \
-eUx Umathaccents parfillleftskip parfillrightskip 
+punctuationspace hairspace enquad emquad zerowidthspace \
+zerowidthnonjoiner zerowidthjoiner zwnj zwj optionalspace \
+asciispacechar softhyphen Ux eUx Umathaccents \
+parfillleftskip parfillrightskip 
 
 keywordclass.context.helpers=\
 startsetups stopsetups startxmlsetups stopxmlsetups \
