--- a/context/data/scite/context/scite-context-data-interfaces.properties
+++ b/context/data/scite/context/scite-context-data-interfaces.properties
@@ -1188,31 +1188,32 @@ xmlattdef xmlattribute xmlattributedef xmlbadinclusions xmlbeforedocumentsetup \
 xmlbeforesetup xmlchainatt xmlchainattdef xmlchecknamespace xmlcommand \
 xmlconcat xmlconcatrange xmlcontext xmlcount xmldefaulttotext \
 xmldirectives xmldirectivesafter xmldirectivesbefore xmldisplayverbatim xmldoif \
-xmldoifelse xmldoifelseempty xmldoifelseselfempty xmldoifelsetext xmldoifelsevalue \
-xmldoifnot xmldoifnotselfempty xmldoifnottext xmldoifselfempty xmldoiftext \
-xmlelement xmlfilter xmlfirst xmlflush xmlflushcontext \
-xmlflushdocumentsetups xmlflushlinewise xmlflushpure xmlflushspacewise xmlflushtext \
-xmlinclude xmlinclusion xmlinclusions xmlinfo xmlinjector \
-xmlinlineprettyprint xmlinlineprettyprinttext xmlinlineverbatim xmlinstalldirective xmllast \
-xmllastatt xmllastmatch xmllastpar xmlloadbuffer xmlloaddata \
-xmlloaddirectives xmlloadfile xmlloadonly xmlmain xmlmapvalue \
-xmlname xmlnamespace xmlnonspace xmlpar xmlparam \
-xmlpath xmlpos xmlposition xmlprependdocumentsetup xmlprependsetup \
-xmlprettyprint xmlprettyprinttext xmlprocessbuffer xmlprocessdata xmlprocessfile \
-xmlpure xmlraw xmlrefatt xmlregistereddocumentsetups xmlregisteredsetups \
-xmlregisterns xmlremapname xmlremapnamespace xmlremovedocumentsetup xmlremovesetup \
-xmlresetdocumentsetups xmlresetinjectors xmlresetsetups xmlsave xmlsetatt \
-xmlsetattribute xmlsetentity xmlsetfunction xmlsetinjectors xmlsetpar \
-xmlsetparam xmlsetsetup xmlsetup xmlshow xmlsnippet \
-xmlstrip xmlstripnolines xmlstripped xmlstrippednolines xmltag \
-xmltexentity xmltext xmltobuffer xmltobufferverbose xmltofile \
-xmlvalue xmlverbatim xrel xrightarrow xrightharpoondown \
-xrightharpoonup xrightleftharpoons xrightoverleftarrow xsplitstring xtriplerel \
-xtwoheadleftarrow xtwoheadrightarrow xxfrac xypos yacute \
-ycircumflex ydiaeresis ydotbelow yen ygrave \
-yhook ymacron ytilde zacute zcaron \
-zdotaccent zerowidthnobreakspace zerowidthspace zeta zhook \
-zstroke zwj zwnj 
+xmldoifatt xmldoifelse xmldoifelseatt xmldoifelseempty xmldoifelseselfempty \
+xmldoifelsetext xmldoifelsevalue xmldoifnot xmldoifnotatt xmldoifnotselfempty \
+xmldoifnottext xmldoifselfempty xmldoiftext xmlelement xmlfilter \
+xmlfirst xmlflush xmlflushcontext xmlflushdocumentsetups xmlflushlinewise \
+xmlflushpure xmlflushspacewise xmlflushtext xmlinclude xmlinclusion \
+xmlinclusions xmlinfo xmlinjector xmlinlineprettyprint xmlinlineprettyprinttext \
+xmlinlineverbatim xmlinstalldirective xmllast xmllastatt xmllastmatch \
+xmllastpar xmlloadbuffer xmlloaddata xmlloaddirectives xmlloadfile \
+xmlloadonly xmlmain xmlmapvalue xmlname xmlnamespace \
+xmlnonspace xmlpar xmlparam xmlpath xmlpos \
+xmlposition xmlprependdocumentsetup xmlprependsetup xmlprettyprint xmlprettyprinttext \
+xmlprocessbuffer xmlprocessdata xmlprocessfile xmlpure xmlraw \
+xmlrefatt xmlregistereddocumentsetups xmlregisteredsetups xmlregisterns xmlremapname \
+xmlremapnamespace xmlremovedocumentsetup xmlremovesetup xmlresetdocumentsetups xmlresetinjectors \
+xmlresetsetups xmlsave xmlsetatt xmlsetattribute xmlsetentity \
+xmlsetfunction xmlsetinjectors xmlsetpar xmlsetparam xmlsetsetup \
+xmlsetup xmlshow xmlsnippet xmlstrip xmlstripnolines \
+xmlstripped xmlstrippednolines xmltag xmltexentity xmltext \
+xmltobuffer xmltobufferverbose xmltofile xmlvalue xmlverbatim \
+xrel xrightarrow xrightharpoondown xrightharpoonup xrightleftharpoons \
+xrightoverleftarrow xsplitstring xtriplerel xtwoheadleftarrow xtwoheadrightarrow \
+xxfrac xypos yacute ycircumflex ydiaeresis \
+ydotbelow yen ygrave yhook ymacron \
+ytilde zacute zcaron zdotaccent zerowidthnobreakspace \
+zerowidthspace zeta zhook zstroke zwj \
+zwnj 
 
 keywordclass.context.cs=\
 Cisla Kap MESIC Rimskecislice \
