--- a/context/data/scite/context/scite-context-data-metapost.properties
+++ b/context/data/scite/context/scite-context-data-metapost.properties
@@ -105,9 +105,9 @@ totalweight autorounding fillin proofing tracingpens \
 xoffset chardx granularity smoothing turningcheck \
 yoffset chardy hppp tracingedges vppp \
 extra_beginfig extra_endfig mpxbreak endinput message \
-delimiters turningnumber errmessage readstring scantokens \
-end outer inner write to \
-readfrom withprescript withpostscript top bot \
+delimiters turningnumber errmessage scantokens end \
+outer inner write to readfrom \
+closefrom withprescript withpostscript top bot \
 lft rt ulft urt llft \
 lrt redpart greenpart bluepart cyanpart \
 magentapart yellowpart blackpart prescriptpart postscriptpart \
