--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -74,56 +74,56 @@ etoks etoksapp etokspre eufactor everybeforepar \
 everymathatom everytab exceptionpenalty expand expandactive \
 expandafterpars expandafterspaces expandcstoken expanded expandedafter \
 expandedloop expandtoken explicitdiscretionary explicithyphenpenalty firstvalidlanguage \
-float floatdef flushmarks fontcharba fontcharta \
-fontid fontmathcontrol fontspecdef fontspecid fontspecifiedname \
-fontspecifiedsize fontspecscale fontspecxscale fontspecyscale fonttextcontrol \
-formatname frozen futurecsname futuredef futureexpand \
-futureexpandis futureexpandisap gdefcsname gleaders glet \
-gletcsname glettonothing gluespecdef glyph glyphdatafield \
-glyphoptions glyphscale glyphscriptfield glyphscriptscale glyphscriptscriptscale \
-glyphstatefield glyphtextscale glyphxoffset glyphxscale glyphxscaled \
-glyphyoffset glyphyscale glyphyscaled gtoksapp gtokspre \
-hccode hjcode hmcode holdingmigrations hpack \
-hyphenationmin hyphenationmode ifabsdim ifabsfloat ifabsnum \
-ifarguments ifboolean ifchkdim ifchkdimension ifchknum \
-ifchknumber ifcmpdim ifcmpnum ifcondition ifcstok \
-ifdimexpression ifdimval ifempty ifflags iffloat \
-ifhaschar ifhastok ifhastoks ifhasxtoks ifincsname \
-ifinsert ifmathparameter ifmathstyle ifnumexpression ifnumval \
-ifparameter ifparameters ifrelax iftok ifzerodim \
-ifzerofloat ifzeronum ignorearguments ignoredepthcriterium ignorepars \
-immediate immutable indexofcharacter indexofregister inherited \
-initcatcodetable insertbox insertcopy insertdepth insertdistance \
-insertheight insertheights insertlimit insertmaxdepth insertmode \
-insertmultiplier insertpenalty insertprogress insertstorage insertstoring \
-insertunbox insertuncopy insertwidth instance integerdef \
-lastarguments lastatomclass lastboundary lastchkdim lastchknum \
-lastleftclass lastloopiterator lastnamedcs lastnodesubtype lastpageextra \
-lastparcontext lastrightclass leftmarginkern letcharcode letcsname \
-letfrozen letmathatomrule letmathparent letmathspacing letprotected \
-lettonothing linebreakcriterium linedirection localbrokenpenalty localcontrol \
-localcontrolled localcontrolledloop localinterlinepenalty localleftbox localleftboxbox \
-localmiddlebox localmiddleboxbox localrightbox localrightboxbox lpcode \
-luabytecode luabytecodecall luacopyinputnodes luadef luaescapestring \
-luafunction luafunctioncall luatexbanner luatexrevision luatexversion \
-mathaccent mathatom mathatomglue mathatomskip mathbackwardpenalties \
-mathbeginclass mathbinary mathcheckfencesmode mathclose mathdictgroup \
-mathdictproperties mathdirection mathdisplaymode mathdisplayskipmode mathdoublescriptmode \
-mathendclass matheqnogapstep mathfenced mathfontcontrol mathforwardpenalties \
-mathfraction mathghost mathgluemode mathgroupingmode mathinner \
-mathleftclass mathlimitsmode mathmainstyle mathmiddle mathnolimitsmode \
-mathopen mathoperator mathordinary mathoverline mathpenaltiesmode \
-mathpunctuation mathradical mathrelation mathrightclass mathrulesfam \
-mathrulesmode mathscale mathscriptsmode mathslackmode mathspacingmode \
-mathstackstyle mathstyle mathstylefontid mathsurroundmode mathsurroundskip \
-maththreshold mathunderline meaningasis meaningful meaningfull \
-meaningles meaningless mugluespecdef mutable noaligned \
-noatomruling noboundary nohrule norelax normalizelinemode \
-normalizeparmode nospaces novrule numericscale numexpression \
-orelse orphanpenalties orphanpenalty orunless outputbox \
-overloaded overloadmode overshoot pageboundary pageextragoal \
-pagevsize parametercount parametermark parattribute pardirection \
-permanent pettymuskip posexpr positdef postexhyphenchar \
+float floatdef floatexpr flushmarks fontcharba \
+fontcharta fontid fontmathcontrol fontspecdef fontspecid \
+fontspecifiedname fontspecifiedsize fontspecscale fontspecxscale fontspecyscale \
+fonttextcontrol formatname frozen futurecsname futuredef \
+futureexpand futureexpandis futureexpandisap gdefcsname gleaders \
+glet gletcsname glettonothing gluespecdef glyph \
+glyphdatafield glyphoptions glyphscale glyphscriptfield glyphscriptscale \
+glyphscriptscriptscale glyphstatefield glyphtextscale glyphxoffset glyphxscale \
+glyphxscaled glyphyoffset glyphyscale glyphyscaled gtoksapp \
+gtokspre hccode hjcode hmcode holdingmigrations \
+hpack hyphenationmin hyphenationmode ifabsdim ifabsfloat \
+ifabsnum ifarguments ifboolean ifchkdim ifchkdimension \
+ifchknum ifchknumber ifcmpdim ifcmpnum ifcondition \
+ifcstok ifdimexpression ifdimval ifempty ifflags \
+iffloat ifhaschar ifhastok ifhastoks ifhasxtoks \
+ifincsname ifinsert ifmathparameter ifmathstyle ifnumexpression \
+ifnumval ifparameter ifparameters ifrelax iftok \
+ifzerodim ifzerofloat ifzeronum ignorearguments ignoredepthcriterium \
+ignorepars immediate immutable indexofcharacter indexofregister \
+inherited initcatcodetable insertbox insertcopy insertdepth \
+insertdistance insertheight insertheights insertlimit insertmaxdepth \
+insertmode insertmultiplier insertpenalty insertprogress insertstorage \
+insertstoring insertunbox insertuncopy insertwidth instance \
+integerdef lastarguments lastatomclass lastboundary lastchkdim \
+lastchknum lastleftclass lastloopiterator lastnamedcs lastnodesubtype \
+lastpageextra lastparcontext lastrightclass leftmarginkern letcharcode \
+letcsname letfrozen letmathatomrule letmathparent letmathspacing \
+letprotected lettonothing linebreakcriterium linedirection localbrokenpenalty \
+localcontrol localcontrolled localcontrolledloop localinterlinepenalty localleftbox \
+localleftboxbox localmiddlebox localmiddleboxbox localrightbox localrightboxbox \
+lpcode luabytecode luabytecodecall luacopyinputnodes luadef \
+luaescapestring luafunction luafunctioncall luatexbanner luatexrevision \
+luatexversion mathaccent mathatom mathatomglue mathatomskip \
+mathbackwardpenalties mathbeginclass mathbinary mathcheckfencesmode mathclose \
+mathdictgroup mathdictproperties mathdirection mathdisplaymode mathdisplayskipmode \
+mathdoublescriptmode mathendclass matheqnogapstep mathfenced mathfontcontrol \
+mathforwardpenalties mathfraction mathghost mathgluemode mathgroupingmode \
+mathinner mathleftclass mathlimitsmode mathmainstyle mathmiddle \
+mathnolimitsmode mathopen mathoperator mathordinary mathoverline \
+mathpenaltiesmode mathpunctuation mathradical mathrelation mathrightclass \
+mathrulesfam mathrulesmode mathscale mathscriptsmode mathslackmode \
+mathspacingmode mathstackstyle mathstyle mathstylefontid mathsurroundmode \
+mathsurroundskip maththreshold mathunderline meaningasis meaningful \
+meaningfull meaningles meaningless mugluespecdef mutable \
+noaligned noatomruling noboundary nohrule norelax \
+normalizelinemode normalizeparmode nospaces novrule numericscale \
+numexpression orelse orphanpenalties orphanpenalty orunless \
+outputbox overloaded overloadmode overshoot pageboundary \
+pageextragoal pagevsize parametercount parametermark parattribute \
+pardirection permanent pettymuskip positdef postexhyphenchar \
 posthyphenchar postinlinepenalty prebinoppenalty predisplaygapfactor preexhyphenchar \
 prehyphenchar preinlinepenalty prerelpenalty protrudechars protrusionboundary \
 pxdimen quitloop quitvmode resetmathspacing retokenized \
