--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -135,17 +135,18 @@ scaledfontdimen scaledinterwordshrink scaledinterwordspace scaledinterwordstretc
 scaledslantperpoint scantextokens semiexpand semiexpanded semiprotected \
 setdefaultmathcodes setfontid setmathatomrule setmathdisplaypostpenalty setmathdisplayprepenalty \
 setmathignore setmathoptions setmathpostpenalty setmathprepenalty setmathspacing \
-shapingpenaltiesmode shapingpenalty snapshotpar srule supmarkmode \
-swapcsvalues tabsize textdirection thewithoutunit tinymuskip \
-todimension tohexadecimal tointeger tokenized toksapp \
-tokspre tolerant tomathstyle toscaled tosparsedimension \
-tosparsescaled tpack tracingadjusts tracingalignments tracingexpressions \
-tracingfonts tracingfullboxes tracinghyphenation tracinginserts tracinglevels \
-tracinglists tracingmarks tracingmath tracingnodes tracingpenalties \
-tsplit uleaders undent unexpandedloop unhpack \
-unletfrozen unletprotected untraced unvpack variablefam \
-virtualhrule virtualvrule vpack vpenalty wordboundary \
-wrapuppar xdefcsname xtoks xtoksapp xtokspre 
+shapingpenaltiesmode shapingpenalty shortinlinemaththreshold snapshotpar srule \
+supmarkmode swapcsvalues tabsize textdirection thewithoutunit \
+tinymuskip todimension tohexadecimal tointeger tokenized \
+toksapp tokspre tolerant tomathstyle toscaled \
+tosparsedimension tosparsescaled tpack tracingadjusts tracingalignments \
+tracingexpressions tracingfonts tracingfullboxes tracinghyphenation tracinginserts \
+tracinglevels tracinglists tracingmarks tracingmath tracingnodes \
+tracingpenalties tsplit uleaders undent unexpandedloop \
+unhpack unletfrozen unletprotected untraced unvpack \
+variablefam virtualhrule virtualvrule vpack vpenalty \
+wordboundary wrapuppar xdefcsname xtoks xtoksapp \
+xtokspre 
 
 keywordclass.tex.omega=\
 Omegaminorversion Omegarevision Omegaversion 
