--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -93,7 +93,7 @@ ifhaschar ifhastok ifhastoks ifhasxtoks ifincsname \
 ifinsert ifintervaldim ifintervalfloat ifintervalnum ifmathparameter \
 ifmathstyle ifnumexpression ifnumval ifparameter ifparameters \
 ifrelax iftok ifzerodim ifzerofloat ifzeronum \
-ignorearguments ignoredepthcriterium ignorepars immediate immutable \
+ignorearguments ignoredepthcriterion ignorepars immediate immutable \
 indexofcharacter indexofregister inherited initcatcodetable insertbox \
 insertcopy insertdepth insertdistance insertheight insertheights \
 insertlimit insertmaxdepth insertmode insertmultiplier insertpenalty \
@@ -102,7 +102,7 @@ insertwidth instance integerdef lastarguments lastatomclass \
 lastboundary lastchkdim lastchknum lastleftclass lastloopiterator \
 lastnamedcs lastnodesubtype lastpageextra lastparcontext lastrightclass \
 leftmarginkern letcharcode letcsname letfrozen letmathatomrule \
-letmathparent letmathspacing letprotected lettonothing linebreakcriterium \
+letmathparent letmathspacing letprotected lettonothing linebreakcriterion \
 linedirection localbrokenpenalty localcontrol localcontrolled localcontrolledloop \
 localinterlinepenalty localleftbox localleftboxbox localmiddlebox localmiddleboxbox \
 localrightbox localrightboxbox lpcode luabytecode luabytecodecall \
