--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -109,44 +109,44 @@ localrightbox localrightboxbox lpcode luabytecode luabytecodecall \
 luacopyinputnodes luadef luaescapestring luafunction luafunctioncall \
 luatexbanner luatexrevision luatexversion mathaccent mathatom \
 mathatomglue mathatomskip mathbackwardpenalties mathbeginclass mathbinary \
-mathcheckfencesmode mathclose mathdictgroup mathdictproperties mathdirection \
-mathdisplaymode mathdisplayskipmode mathdoublescriptmode mathendclass matheqnogapstep \
-mathfenced mathfontcontrol mathforwardpenalties mathfraction mathghost \
-mathgluemode mathgroupingmode mathinner mathleftclass mathlimitsmode \
-mathmainstyle mathmiddle mathnolimitsmode mathopen mathoperator \
-mathordinary mathoverline mathpenaltiesmode mathpunctuation mathradical \
-mathrelation mathrightclass mathrulesfam mathrulesmode mathscale \
-mathscriptsmode mathslackmode mathspacingmode mathstackstyle mathstyle \
-mathstylefontid mathsurroundmode mathsurroundskip maththreshold mathunderline \
-meaningasis meaningful meaningfull meaningles meaningless \
-mugluespecdef multiplyby mutable noaligned noatomruling \
-noboundary nohrule norelax normalizelinemode normalizeparmode \
-nospaces novrule numericscale numexpression orelse \
-orphanpenalties orphanpenalty orunless outputbox overloaded \
-overloadmode overshoot pageboundary pageextragoal pagevsize \
-parametercount parametermark parattribute pardirection parfillleftskip \
-parfillrightskip parinitleftskip parinitrightskip permanent pettymuskip \
-positdef postexhyphenchar posthyphenchar postinlinepenalty postshortinlinepenalty \
-prebinoppenalty predisplaygapfactor preexhyphenchar prehyphenchar preinlinepenalty \
-prerelpenalty preshortinlinepenalty protrudechars protrusionboundary pxdimen \
-quitloop quitvmode resetmathspacing retokenized rightmarginkern \
-rpcode savecatcodetable scaledemwidth scaledexheight scaledextraspace \
-scaledfontdimen scaledinterwordshrink scaledinterwordspace scaledinterwordstretch scaledmathstyle \
-scaledslantperpoint scantextokens semiexpand semiexpanded semiprotected \
-setdefaultmathcodes setfontid setmathatomrule setmathdisplaypostpenalty setmathdisplayprepenalty \
-setmathignore setmathoptions setmathpostpenalty setmathprepenalty setmathspacing \
-shapingpenaltiesmode shapingpenalty shortinlinemaththreshold snapshotpar srule \
-supmarkmode swapcsvalues tabsize textdirection thewithoutunit \
-tinymuskip todimension tohexadecimal tointeger tokenized \
-toksapp tokspre tolerant tomathstyle toscaled \
-tosparsedimension tosparsescaled tpack tracingadjusts tracingalignments \
-tracingexpressions tracingfonts tracingfullboxes tracinghyphenation tracinginserts \
-tracinglevels tracinglists tracingmarks tracingmath tracingnodes \
-tracingpenalties tsplit uleaders undent unexpandedloop \
-unhpack unletfrozen unletprotected untraced unvpack \
-variablefam virtualhrule virtualvrule vpack vpenalty \
-wordboundary wrapuppar xdefcsname xtoks xtoksapp \
-xtokspre 
+mathboundary mathcheckfencesmode mathclose mathdictgroup mathdictproperties \
+mathdirection mathdisplaymode mathdisplaypenaltyfactor mathdisplayskipmode mathdoublescriptmode \
+mathendclass matheqnogapstep mathfenced mathfontcontrol mathforwardpenalties \
+mathfraction mathghost mathgluemode mathgroupingmode mathinlinepenaltyfactor \
+mathinner mathleftclass mathlimitsmode mathmainstyle mathmiddle \
+mathnolimitsmode mathopen mathoperator mathordinary mathoverline \
+mathpenaltiesmode mathpunctuation mathradical mathrelation mathrightclass \
+mathrulesfam mathrulesmode mathscale mathscriptsmode mathslackmode \
+mathspacingmode mathstackstyle mathstyle mathstylefontid mathsurroundmode \
+mathsurroundskip maththreshold mathunderline meaningasis meaningful \
+meaningfull meaningles meaningless mugluespecdef multiplyby \
+mutable noaligned noatomruling noboundary nohrule \
+norelax normalizelinemode normalizeparmode nospaces novrule \
+numericscale numexpression orelse orphanpenalties orphanpenalty \
+orunless outputbox overloaded overloadmode overshoot \
+pageboundary pageextragoal pagevsize parametercount parametermark \
+parattribute pardirection parfillleftskip parfillrightskip parinitleftskip \
+parinitrightskip permanent pettymuskip positdef postexhyphenchar \
+posthyphenchar postinlinepenalty postshortinlinepenalty prebinoppenalty predisplaygapfactor \
+preexhyphenchar prehyphenchar preinlinepenalty prerelpenalty preshortinlinepenalty \
+protrudechars protrusionboundary pxdimen quitloop quitvmode \
+resetmathspacing retokenized rightmarginkern rpcode savecatcodetable \
+scaledemwidth scaledexheight scaledextraspace scaledfontdimen scaledinterwordshrink \
+scaledinterwordspace scaledinterwordstretch scaledmathstyle scaledslantperpoint scantextokens \
+semiexpand semiexpanded semiprotected setdefaultmathcodes setfontid \
+setmathatomrule setmathdisplaypostpenalty setmathdisplayprepenalty setmathignore setmathoptions \
+setmathpostpenalty setmathprepenalty setmathspacing shapingpenaltiesmode shapingpenalty \
+shortinlinemaththreshold shortinlineorphanpenalty snapshotpar srule supmarkmode \
+swapcsvalues tabsize textdirection thewithoutunit tinymuskip \
+todimension tohexadecimal tointeger tokenized toksapp \
+tokspre tolerant tomathstyle toscaled tosparsedimension \
+tosparsescaled tpack tracingadjusts tracingalignments tracingexpressions \
+tracingfonts tracingfullboxes tracinghyphenation tracinginserts tracinglevels \
+tracinglists tracingmarks tracingmath tracingnodes tracingpenalties \
+tsplit uleaders undent unexpandedloop unhpack \
+unletfrozen unletprotected untraced unvpack variablefam \
+virtualhrule virtualvrule vpack vpenalty wordboundary \
+wrapuppar xdefcsname xtoks xtoksapp xtokspre 
 
 keywordclass.tex.omega=\
 Omegaminorversion Omegarevision Omegaversion 
