--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -94,66 +94,66 @@ iffloat ifhaschar ifhastok ifhastoks ifhasxtoks \
 ifincsname ifinsert ifintervaldim ifintervalfloat ifintervalnum \
 ifmathparameter ifmathstyle ifnumexpression ifnumval ifparameter \
 ifparameters ifrelax iftok ifzerodim ifzerofloat \
-ifzeronum ignorearguments ignoredepthcriterion ignorepars ignoreupto \
-immediate immutable indexofcharacter indexofregister inherited \
-initcatcodetable initialpageskip insertbox insertcopy insertdepth \
-insertdistance insertheight insertheights insertlimit insertmaxdepth \
-insertmode insertmultiplier insertpenalty insertprogress insertstorage \
-insertstoring insertunbox insertuncopy insertwidth instance \
-integerdef lastarguments lastatomclass lastboundary lastchkdim \
-lastchknum lastleftclass lastloopiterator lastnamedcs lastnodesubtype \
-lastpageextra lastparcontext lastrightclass leftmarginkern letcharcode \
-letcsname letfrozen letmathatomrule letmathparent letmathspacing \
-letprotected lettolastnamedcs lettonothing linebreakcriterion linebreakoptional \
-linebreakpasses linedirection localbrokenpenalty localcontrol localcontrolled \
-localcontrolledloop localcontrolledrepeat localinterlinepenalty localleftbox localleftboxbox \
-localmiddlebox localmiddleboxbox localpretolerance localrightbox localrightboxbox \
-localtolerance lpcode luabytecode luabytecodecall luacopyinputnodes \
-luadef luaescapestring luafunction luafunctioncall luatexbanner \
-luatexrevision luatexversion mathaccent mathatom mathatomglue \
-mathatomskip mathbackwardpenalties mathbeginclass mathbinary mathboundary \
-mathcheckfencesmode mathclose mathdictgroup mathdictproperties mathdirection \
-mathdisplaymode mathdisplaypenaltyfactor mathdisplayskipmode mathdoublescriptmode mathendclass \
-matheqnogapstep mathfenced mathfontcontrol mathforwardpenalties mathfraction \
-mathghost mathgluemode mathgroupingmode mathinlinepenaltyfactor mathinner \
-mathleftclass mathlimitsmode mathmainstyle mathmiddle mathnolimitsmode \
-mathopen mathoperator mathordinary mathoverline mathpenaltiesmode \
-mathpretolerance mathpunctuation mathradical mathrelation mathrightclass \
-mathrulesfam mathrulesmode mathscale mathscriptsmode mathslackmode \
-mathspacingmode mathstackstyle mathstyle mathstylefontid mathsurroundmode \
-mathsurroundskip maththreshold mathtolerance mathunderline meaningasis \
-meaningful meaningfull meaningles meaningless mugluespecdef \
-multiplyby mutable noaligned noatomruling noboundary \
-nohrule norelax normalizelinemode normalizeparmode nospaces \
-novrule numericscale numexpression optionalboundary orelse \
-orphanpenalties orphanpenalty orunless outputbox overloaded \
-overloadmode overshoot pageboundary pagedepth pageextragoal \
-pagelastdepth pagelastfilllstretch pagelastfillstretch pagelastfilstretch pagelastheight \
-pagelastshrink pagelaststretch pagevsize parametercount parametermark \
-parattribute pardirection parfillleftskip parfillrightskip parinitleftskip \
-parinitrightskip parpasses permanent pettymuskip positdef \
-postexhyphenchar posthyphenchar postinlinepenalty postshortinlinepenalty prebinoppenalty \
-predisplaygapfactor preexhyphenchar prehyphenchar preinlinepenalty prerelpenalty \
-preshortinlinepenalty protrudechars protrusionboundary pxdimen quitloop \
-quitvmode resetmathspacing retokenized rightmarginkern rpcode \
-savecatcodetable scaledemwidth scaledexheight scaledextraspace scaledfontdimen \
-scaledinterwordshrink scaledinterwordspace scaledinterwordstretch scaledmathstyle scaledslantperpoint \
-scantextokens semiexpand semiexpanded semiprotected setdefaultmathcodes \
-setfontid setmathatomrule setmathdisplaypostpenalty setmathdisplayprepenalty setmathignore \
-setmathoptions setmathpostpenalty setmathprepenalty setmathspacing shapingpenaltiesmode \
-shapingpenalty shortinlinemaththreshold shortinlineorphanpenalty singlelinepenalty snapshotpar \
-spacefactormode spacefactorshrinklimit spacefactorstretchlimit srule supmarkmode \
-swapcsvalues tabsize textdirection thewithoutunit tinymuskip \
-todimension tohexadecimal tointeger tokenized toksapp \
-tokspre tolerant tomathstyle toscaled tosparsedimension \
-tosparsescaled tpack tracingadjusts tracingalignments tracingexpressions \
-tracingfonts tracingfullboxes tracinghyphenation tracinginserts tracinglevels \
-tracinglists tracingmarks tracingmath tracingnodes tracingpasses \
-tracingpenalties tsplit uleaders undent unexpandedloop \
-unexpandedrepeat unhpack unletfrozen unletprotected untraced \
-unvpack variablefam virtualhrule virtualvrule vpack \
-vpenalty wordboundary wrapuppar xdefcsname xtoks \
-xtoksapp xtokspre 
+ifzeronum ignorearguments ignoredepthcriterion ignorenestedupto ignorepars \
+ignoreupto immediate immutable indexofcharacter indexofregister \
+inherited initcatcodetable initialpageskip insertbox insertcopy \
+insertdepth insertdistance insertheight insertheights insertlimit \
+insertmaxdepth insertmode insertmultiplier insertpenalty insertprogress \
+insertstorage insertstoring insertunbox insertuncopy insertwidth \
+instance integerdef lastarguments lastatomclass lastboundary \
+lastchkdim lastchknum lastleftclass lastloopiterator lastnamedcs \
+lastnodesubtype lastpageextra lastparcontext lastrightclass leftmarginkern \
+letcharcode letcsname letfrozen letmathatomrule letmathparent \
+letmathspacing letprotected lettolastnamedcs lettonothing linebreakcriterion \
+linebreakoptional linebreakpasses linedirection localbrokenpenalty localcontrol \
+localcontrolled localcontrolledloop localcontrolledrepeat localinterlinepenalty localleftbox \
+localleftboxbox localmiddlebox localmiddleboxbox localpretolerance localrightbox \
+localrightboxbox localtolerance lpcode luabytecode luabytecodecall \
+luacopyinputnodes luadef luaescapestring luafunction luafunctioncall \
+luatexbanner luatexrevision luatexversion mathaccent mathatom \
+mathatomglue mathatomskip mathbackwardpenalties mathbeginclass mathbinary \
+mathboundary mathcheckfencesmode mathclose mathdictgroup mathdictproperties \
+mathdirection mathdisplaymode mathdisplaypenaltyfactor mathdisplayskipmode mathdoublescriptmode \
+mathendclass matheqnogapstep mathfenced mathfontcontrol mathforwardpenalties \
+mathfraction mathghost mathgluemode mathgroupingmode mathinlinepenaltyfactor \
+mathinner mathleftclass mathlimitsmode mathmainstyle mathmiddle \
+mathnolimitsmode mathopen mathoperator mathordinary mathoverline \
+mathpenaltiesmode mathpretolerance mathpunctuation mathradical mathrelation \
+mathrightclass mathrulesfam mathrulesmode mathscale mathscriptsmode \
+mathslackmode mathspacingmode mathstackstyle mathstyle mathstylefontid \
+mathsurroundmode mathsurroundskip maththreshold mathtolerance mathunderline \
+meaningasis meaningful meaningfull meaningles meaningless \
+mugluespecdef multiplyby mutable noaligned noatomruling \
+noboundary nohrule norelax normalizelinemode normalizeparmode \
+nospaces novrule numericscale numexpression optionalboundary \
+orelse orphanpenalties orphanpenalty orunless outputbox \
+overloaded overloadmode overshoot pageboundary pagedepth \
+pageexcess pageextragoal pagelastdepth pagelastfilllstretch pagelastfillstretch \
+pagelastfilstretch pagelastheight pagelastshrink pagelaststretch pagevsize \
+parametercount parametermark parattribute pardirection parfillleftskip \
+parfillrightskip parinitleftskip parinitrightskip parpasses permanent \
+pettymuskip positdef postexhyphenchar posthyphenchar postinlinepenalty \
+postshortinlinepenalty prebinoppenalty predisplaygapfactor preexhyphenchar prehyphenchar \
+preinlinepenalty prerelpenalty preshortinlinepenalty protrudechars protrusionboundary \
+pxdimen quitloop quitvmode resetmathspacing retokenized \
+rightmarginkern rpcode savecatcodetable scaledemwidth scaledexheight \
+scaledextraspace scaledfontdimen scaledinterwordshrink scaledinterwordspace scaledinterwordstretch \
+scaledmathstyle scaledslantperpoint scantextokens semiexpand semiexpanded \
+semiprotected setdefaultmathcodes setfontid setmathatomrule setmathdisplaypostpenalty \
+setmathdisplayprepenalty setmathignore setmathoptions setmathpostpenalty setmathprepenalty \
+setmathspacing shapingpenaltiesmode shapingpenalty shortinlinemaththreshold shortinlineorphanpenalty \
+singlelinepenalty snapshotpar spacefactormode spacefactorshrinklimit spacefactorstretchlimit \
+srule supmarkmode swapcsvalues tabsize textdirection \
+thewithoutunit tinymuskip todimension tohexadecimal tointeger \
+tokenized toksapp tokspre tolerant tomathstyle \
+toscaled tosparsedimension tosparsescaled tpack tracingadjusts \
+tracingalignments tracingexpressions tracingfonts tracingfullboxes tracinghyphenation \
+tracinginserts tracinglevels tracinglists tracingmarks tracingmath \
+tracingnodes tracingpasses tracingpenalties tsplit uleaders \
+undent unexpandedloop unexpandedrepeat unhpack unletfrozen \
+unletprotected untraced unvpack variablefam virtualhrule \
+virtualvrule vpack vpenalty wordboundary wrapuppar \
+xdefcsname xtoks xtoksapp xtokspre 
 
 keywordclass.tex.omega=\
 Omegaminorversion Omegarevision Omegaversion 
