--- a/context/data/scite/context/scite-context-data-context.properties
+++ b/context/data/scite/context/scite-context-data-context.properties
@@ -325,5 +325,5 @@ mathcontrolcodestring mathflattencodestring normalizecodestring parcontextcodest
 newlocaldimen newlocalskip newlocalmuskip newlocaltoks newlocalbox \
 newlocalwrite newlocalread setnewlocalcount setnewlocaldimen setnewlocalskip \
 setnewlocalmuskip setnewlocaltoks setnewlocalbox ifexpression localcontrolledrepeating \
-expandedrepeating unexpandedrepeating 
+expandedrepeating unexpandedrepeating lastchkinteger ifchkinteger 
 
