--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -101,7 +101,7 @@ insertcopy insertdepth insertdistance insertheight insertheights \
 insertlimit insertmaxdepth insertmode insertmultiplier insertpenalty \
 insertprogress insertstorage insertstoring insertunbox insertuncopy \
 insertwidth instance integerdef lastarguments lastatomclass \
-lastboundary lastchkdim lastchknum lastleftclass lastloopiterator \
+lastboundary lastchkdimension lastchknumber lastleftclass lastloopiterator \
 lastnamedcs lastnodesubtype lastpageextra lastparcontext lastrightclass \
 leftmarginkern letcharcode letcsname letfrozen letmathatomrule \
 letmathparent letmathspacing letprotected lettolastnamedcs lettonothing \
