--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -136,27 +136,27 @@ parameterdef parameterindex parametermark parattribute pardirection \
 parfillleftskip parfillrightskip parinitleftskip parinitrightskip parpasses \
 permanent pettymuskip positdef postexhyphenchar posthyphenchar \
 postinlinepenalty postshortinlinepenalty prebinoppenalty predisplaygapfactor preexhyphenchar \
-prehyphenchar preinlinepenalty prerelpenalty preshortinlinepenalty protrudechars \
-protrusionboundary pxdimen quitloop quitvmode resetmathspacing \
-retained retokenized rightmarginkern rpcode savecatcodetable \
-scaledemwidth scaledexheight scaledextraspace scaledfontdimen scaledinterwordshrink \
-scaledinterwordspace scaledinterwordstretch scaledmathstyle scaledslantperpoint scantextokens \
-semiexpand semiexpanded semiprotected setdefaultmathcodes setfontid \
-setmathatomrule setmathdisplaypostpenalty setmathdisplayprepenalty setmathignore setmathoptions \
-setmathpostpenalty setmathprepenalty setmathspacing shapingpenaltiesmode shapingpenalty \
-shortinlinemaththreshold shortinlineorphanpenalty singlelinepenalty snapshotpar spacefactormode \
-spacefactorshrinklimit spacefactorstretchlimit srule supmarkmode swapcsvalues \
-tabsize textdirection thewithoutunit tinymuskip todimension \
-tohexadecimal tointeger tokenized toksapp tokspre \
-tolerant tomathstyle toscaled tosparsedimension tosparsescaled \
-tpack tracingadjusts tracingalignments tracingexpressions tracingfonts \
-tracingfullboxes tracinghyphenation tracinginserts tracinglevels tracinglists \
-tracingmarks tracingmath tracingnodes tracingpasses tracingpenalties \
-tsplit uleaders undent unexpandedloop unexpandedrepeat \
-unhpack unletfrozen unletprotected untraced unvpack \
-variablefam virtualhrule virtualvrule vpack vpenalty \
-wordboundary wrapuppar xdefcsname xtoks xtoksapp \
-xtokspre 
+prehyphenchar preinlinepenalty prerelpenalty preshortinlinepenalty previousloopiterator \
+protrudechars protrusionboundary pxdimen quitloop quitvmode \
+resetmathspacing retained retokenized rightmarginkern rpcode \
+savecatcodetable scaledemwidth scaledexheight scaledextraspace scaledfontdimen \
+scaledinterwordshrink scaledinterwordspace scaledinterwordstretch scaledmathstyle scaledslantperpoint \
+scantextokens semiexpand semiexpanded semiprotected setdefaultmathcodes \
+setfontid setmathatomrule setmathdisplaypostpenalty setmathdisplayprepenalty setmathignore \
+setmathoptions setmathpostpenalty setmathprepenalty setmathspacing shapingpenaltiesmode \
+shapingpenalty shortinlinemaththreshold shortinlineorphanpenalty singlelinepenalty snapshotpar \
+spacefactormode spacefactorshrinklimit spacefactorstretchlimit srule supmarkmode \
+swapcsvalues tabsize textdirection thewithoutunit tinymuskip \
+todimension tohexadecimal tointeger tokenized toksapp \
+tokspre tolerant tomathstyle toscaled tosparsedimension \
+tosparsescaled tpack tracingadjusts tracingalignments tracingexpressions \
+tracingfonts tracingfullboxes tracinghyphenation tracinginserts tracinglevels \
+tracinglists tracingmarks tracingmath tracingnodes tracingpasses \
+tracingpenalties tsplit uleaders undent unexpandedloop \
+unexpandedrepeat unhpack unletfrozen unletprotected untraced \
+unvpack variablefam virtualhrule virtualvrule vpack \
+vpenalty wordboundary wrapuppar xdefcsname xtoks \
+xtoksapp xtokspre 
 
 keywordclass.tex.omega=\
 Omegaminorversion Omegarevision Omegaversion 
