--- a/context/data/scite/context/scite-context-data-context.properties
+++ b/context/data/scite/context/scite-context-data-context.properties
@@ -333,5 +333,5 @@ mathrelation mathpunctuation mathfraction mathradical mathmiddle \
 mathaccent mathfenced mathghost mathvariable mathactive \
 mathvcenter mathimaginary mathdifferential mathexponential mathdigit \
 mathdivision mathfactorial mathwrapped mathconstruct mathdimension \
-mathunary 
+mathunary filebasename filenameonly filedirname filesuffix 
 
