--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -71,90 +71,92 @@ crampeddisplaystyle crampedscriptscriptstyle crampedscriptstyle crampedtextstyle
 csstring currentloopiterator currentloopnesting currentmarks dbox \
 defcsname deferred detokened detokenized dimensiondef \
 dimexpression directlua discretionaryoptions divideby dpack \
-dsplit edefcsname efcode emergencyleftskip emergencyrightskip \
-endlocalcontrol endmathgroup endsimplegroup enforced etoks \
-etoksapp etokspre eufactor everybeforepar everymathatom \
-everytab exceptionpenalty expand expandactive expandafterpars \
-expandafterspaces expandcstoken expanded expandedafter expandedendless \
-expandedloop expandedrepeat expandparameter expandtoken expandtoks \
-explicitdiscretionary explicithyphenpenalty firstvalidlanguage float floatdef \
-floatexpr flushmarks fontcharba fontcharta fontid \
-fontmathcontrol fontspecdef fontspecid fontspecifiedname fontspecifiedsize \
-fontspecscale fontspecxscale fontspecyscale fonttextcontrol formatname \
-frozen futurecsname futuredef futureexpand futureexpandis \
-futureexpandisap gdefcsname gleaders glet gletcsname \
-glettonothing gluespecdef glyph glyphdatafield glyphoptions \
-glyphscale glyphscriptfield glyphscriptscale glyphscriptscriptscale glyphstatefield \
-glyphtextscale glyphxoffset glyphxscale glyphxscaled glyphyoffset \
-glyphyscale glyphyscaled gtoksapp gtokspre hccode \
-hjcode hmcode holdingmigrations hpack hpenalty \
-hyphenationmin hyphenationmode ifabsdim ifabsfloat ifabsnum \
-ifarguments ifboolean ifchkdim ifchkdimension ifchknum \
-ifchknumber ifcmpdim ifcmpnum ifcondition ifcstok \
-ifdimexpression ifdimval ifempty ifflags iffloat \
-ifhaschar ifhastok ifhastoks ifhasxtoks ifincsname \
-ifinsert ifintervaldim ifintervalfloat ifintervalnum ifmathparameter \
-ifmathstyle ifnumexpression ifnumval ifparameter ifparameters \
-ifrelax iftok ifzerodim ifzerofloat ifzeronum \
-ignorearguments ignoredepthcriterion ignorenestedupto ignorepars ignoreupto \
-immediate immutable indexofcharacter indexofregister inherited \
-initcatcodetable initialpageskip initialtopskip insertbox insertcopy \
-insertdepth insertdistance insertheight insertheights insertlimit \
-insertmaxdepth insertmode insertmultiplier insertpenalty insertprogress \
-insertstorage insertstoring insertunbox insertuncopy insertwidth \
-instance integerdef lastarguments lastatomclass lastboundary \
-lastchkdimension lastchknumber lastleftclass lastloopiterator lastnamedcs \
-lastnodesubtype lastpageextra lastparcontext lastrightclass leftmarginkern \
-letcharcode letcsname letfrozen letmathatomrule letmathparent \
-letmathspacing letprotected lettolastnamedcs lettonothing linebreakcriterion \
-linebreakoptional linebreakpasses linedirection localbrokenpenalty localcontrol \
-localcontrolled localcontrolledendless localcontrolledloop localcontrolledrepeat localinterlinepenalty \
-localleftbox localleftboxbox localmiddlebox localmiddleboxbox localpretolerance \
-localrightbox localrightboxbox localtolerance lpcode luabytecode \
-luabytecodecall luacopyinputnodes luadef luaescapestring luafunction \
-luafunctioncall luatexbanner luatexrevision luatexversion mathatom \
-mathatomglue mathatomskip mathbackwardpenalties mathbeginclass mathboundary \
-mathcheckfencesmode mathdictgroup mathdictproperties mathdirection mathdisplaymode \
-mathdisplaypenaltyfactor mathdisplayskipmode mathdoublescriptmode mathendclass matheqnogapstep \
-mathfontcontrol mathforwardpenalties mathgluemode mathgroupingmode mathinlinepenaltyfactor \
-mathleftclass mathlimitsmode mathmainstyle mathnolimitsmode mathpenaltiesmode \
-mathpretolerance mathrightclass mathrulesfam mathrulesmode mathscale \
-mathscriptsmode mathslackmode mathspacingmode mathstackstyle mathstyle \
-mathstylefontid mathsurroundmode mathsurroundskip maththreshold mathtolerance \
-meaningasis meaningful meaningfull meaningles meaningless \
-mugluespecdef multiplyby mutable nestedloopiterator noaligned \
-noatomruling noboundary nohrule norelax normalizelinemode \
-normalizeparmode nospaces novrule numericscale numericscaled \
-numexpression optionalboundary orelse orphanpenalties orphanpenalty \
-orunless outputbox overloaded overloadmode overshoot \
-pageboundary pagedepth pageexcess pageextragoal pagefistretch \
-pagelastdepth pagelastfilllstretch pagelastfillstretch pagelastfilstretch pagelastheight \
-pagelastshrink pagelaststretch pagevsize parametercount parameterdef \
-parameterindex parametermark parametermode parattribute pardirection \
-parfillleftskip parfillrightskip parinitleftskip parinitrightskip parpasses \
-permanent pettymuskip positdef postexhyphenchar posthyphenchar \
-postinlinepenalty postshortinlinepenalty prebinoppenalty predisplaygapfactor preexhyphenchar \
-prehyphenchar preinlinepenalty prerelpenalty preshortinlinepenalty previousloopiterator \
-protrudechars protrusionboundary pxdimen quitloop quitloopnow \
-quitvmode resetmathspacing retained retokenized rightmarginkern \
+dsplit edefcsname edivide edivideby efcode \
+emergencyleftskip emergencyrightskip endlocalcontrol endmathgroup endsimplegroup \
+enforced etoks etoksapp etokspre eufactor \
+everybeforepar everymathatom everytab exceptionpenalty expand \
+expandactive expandafterpars expandafterspaces expandcstoken expanded \
+expandedafter expandedendless expandedloop expandedrepeat expandparameter \
+expandtoken expandtoks explicitdiscretionary explicithyphenpenalty firstvalidlanguage \
+float floatdef floatexpr flushmarks fontcharba \
+fontcharta fontid fontmathcontrol fontspecdef fontspecid \
+fontspecifiedname fontspecifiedsize fontspecscale fontspecxscale fontspecyscale \
+fonttextcontrol formatname frozen futurecsname futuredef \
+futureexpand futureexpandis futureexpandisap gdefcsname gleaders \
+glet gletcsname glettonothing gluespecdef glyph \
+glyphdatafield glyphoptions glyphscale glyphscriptfield glyphscriptscale \
+glyphscriptscriptscale glyphstatefield glyphtextscale glyphxoffset glyphxscale \
+glyphxscaled glyphyoffset glyphyscale glyphyscaled gtoksapp \
+gtokspre hccode hjcode hmcode holdingmigrations \
+hpack hpenalty hyphenationmin hyphenationmode ifabsdim \
+ifabsfloat ifabsnum ifarguments ifboolean ifchkdim \
+ifchkdimension ifchknum ifchknumber ifcmpdim ifcmpnum \
+ifcondition ifcstok ifdimexpression ifdimval ifempty \
+ifflags iffloat ifhaschar ifhastok ifhastoks \
+ifhasxtoks ifinalignment ifincsname ifinsert ifintervaldim \
+ifintervalfloat ifintervalnum ifmathparameter ifmathstyle ifnumexpression \
+ifnumval ifparameter ifparameters ifrelax iftok \
+ifzerodim ifzerofloat ifzeronum ignorearguments ignoredepthcriterion \
+ignorenestedupto ignorepars ignoreupto immediate immutable \
+indexofcharacter indexofregister inherited initcatcodetable initialpageskip \
+initialtopskip insertbox insertcopy insertdepth insertdistance \
+insertheight insertheights insertlimit insertmaxdepth insertmode \
+insertmultiplier insertpenalty insertprogress insertstorage insertstoring \
+insertunbox insertuncopy insertwidth instance integerdef \
+lastarguments lastatomclass lastboundary lastchkdimension lastchknumber \
+lastleftclass lastloopiterator lastnamedcs lastnodesubtype lastpageextra \
+lastparcontext lastrightclass leftmarginkern letcharcode letcsname \
+letfrozen letmathatomrule letmathparent letmathspacing letprotected \
+lettolastnamedcs lettonothing linebreakcriterion linebreakoptional linebreakpasses \
+linedirection localbrokenpenalty localcontrol localcontrolled localcontrolledendless \
+localcontrolledloop localcontrolledrepeat localinterlinepenalty localleftbox localleftboxbox \
+localmiddlebox localmiddleboxbox localpretolerance localrightbox localrightboxbox \
+localtolerance lpcode luabytecode luabytecodecall luacopyinputnodes \
+luadef luaescapestring luafunction luafunctioncall luatexbanner \
+luatexrevision luatexversion mathatom mathatomglue mathatomskip \
+mathbackwardpenalties mathbeginclass mathboundary mathcheckfencesmode mathdictgroup \
+mathdictproperties mathdirection mathdisplaymode mathdisplaypenaltyfactor mathdisplayskipmode \
+mathdoublescriptmode mathendclass matheqnogapstep mathfontcontrol mathforwardpenalties \
+mathgluemode mathgroupingmode mathinlinepenaltyfactor mathleftclass mathlimitsmode \
+mathmainstyle mathnolimitsmode mathpenaltiesmode mathpretolerance mathrightclass \
+mathrulesfam mathrulesmode mathscale mathscriptsmode mathslackmode \
+mathspacingmode mathstackstyle mathstyle mathstylefontid mathsurroundmode \
+mathsurroundskip maththreshold mathtolerance meaningasis meaningful \
+meaningfull meaningles meaningless mugluespecdef multiplyby \
+mutable nestedloopiterator noaligned noatomruling noboundary \
+nohrule norelax normalizelinemode normalizeparmode nospaces \
+novrule numericscale numericscaled numexpression optionalboundary \
+orelse orphanpenalties orphanpenalty orunless outputbox \
+overloaded overloadmode overshoot pageboundary pagedepth \
+pageexcess pageextragoal pagefistretch pagelastdepth pagelastfilllstretch \
+pagelastfillstretch pagelastfilstretch pagelastheight pagelastshrink pagelaststretch \
+pagevsize parametercount parameterdef parameterindex parametermark \
+parametermode parattribute pardirection parfillleftskip parfillrightskip \
+parinitleftskip parinitrightskip parpasses permanent pettymuskip \
+positdef postexhyphenchar posthyphenchar postinlinepenalty postshortinlinepenalty \
+prebinoppenalty predisplaygapfactor preexhyphenchar prehyphenchar preinlinepenalty \
+prerelpenalty preshortinlinepenalty previousloopiterator protrudechars protrusionboundary \
+pxdimen quitloop quitloopnow quitvmode rdivide \
+rdivideby resetmathspacing retained retokenized rightmarginkern \
 rpcode savecatcodetable scaledemwidth scaledexheight scaledextraspace \
-scaledfontdimen scaledinterwordshrink scaledinterwordspace scaledinterwordstretch scaledmathstyle \
-scaledslantperpoint scantextokens semiexpand semiexpanded semiprotected \
-setdefaultmathcodes setfontid setmathatomrule setmathdisplaypostpenalty setmathdisplayprepenalty \
-setmathignore setmathoptions setmathpostpenalty setmathprepenalty setmathspacing \
-shapingpenaltiesmode shapingpenalty shortinlinemaththreshold shortinlineorphanpenalty singlelinepenalty \
-snapshotpar spacefactormode spacefactorshrinklimit spacefactorstretchlimit srule \
-supmarkmode swapcsvalues tabsize textdirection thewithoutunit \
-tinymuskip todimension tohexadecimal tointeger tokenized \
-toksapp tokspre tolerant tomathstyle toscaled \
-tosparsedimension tosparsescaled tpack tracingadjusts tracingalignments \
-tracingexpressions tracingfonts tracingfullboxes tracinghyphenation tracinginserts \
-tracinglevels tracinglists tracingmarks tracingmath tracingnodes \
-tracingpasses tracingpenalties tsplit uleaders undent \
-unexpandedendless unexpandedloop unexpandedrepeat unhpack unletfrozen \
-unletprotected untraced unvpack variablefam virtualhrule \
-virtualvrule vpack vpenalty wordboundary wrapuppar \
-xdefcsname xtoks xtoksapp xtokspre 
+scaledfontcharba scaledfontchardp scaledfontcharht scaledfontcharic scaledfontcharta \
+scaledfontcharwd scaledfontdimen scaledinterwordshrink scaledinterwordspace scaledinterwordstretch \
+scaledmathstyle scaledslantperpoint scantextokens semiexpand semiexpanded \
+semiprotected setdefaultmathcodes setfontid setmathatomrule setmathdisplaypostpenalty \
+setmathdisplayprepenalty setmathignore setmathoptions setmathpostpenalty setmathprepenalty \
+setmathspacing shapingpenaltiesmode shapingpenalty shortinlinemaththreshold shortinlineorphanpenalty \
+singlelinepenalty snapshotpar spacefactormode spacefactorshrinklimit spacefactorstretchlimit \
+srule supmarkmode swapcsvalues tabsize textdirection \
+thewithoutunit tinymuskip todimension tohexadecimal tointeger \
+tokenized toksapp tokspre tolerant tomathstyle \
+toscaled tosparsedimension tosparsescaled tpack tracingadjusts \
+tracingalignments tracingexpressions tracingfonts tracingfullboxes tracinghyphenation \
+tracinginserts tracinglevels tracinglists tracingmarks tracingmath \
+tracingnodes tracingpasses tracingpenalties tsplit uleaders \
+undent unexpandedendless unexpandedloop unexpandedrepeat unhpack \
+unletfrozen unletprotected untraced unvpack variablefam \
+virtualhrule virtualvrule vpack vpenalty wordboundary \
+wrapuppar xdefcsname xtoks xtoksapp xtokspre 
 
 keywordclass.tex.omega=\
 Omegaminorversion Omegarevision Omegaversion 
